# local-chess-analyzer

./: .gitignore  PROJECT_CONTEXT.md  README.md  STOCKFISH_INTEGRATION_SUMMARY.md  Step 5 - completed.md  Step 6. Frontend - First-Time Setup Wizard.md  Summary 03.11.2025.md  Summary 04.11.2025.md  docker-compose.yml
.github/workflows/: desktop.yml  push-images.yml  release-images.yml  release.yml
backend/: Dockerfile  requirements.txt  run_backend.py
backend/app/: main.py
backend/app/api/: database.py  games.py  settings.py  sync.py  system_resources.py
backend/app/crud/: games.py  settings.py
backend/app/db/: database.py  models.py
backend/app/services/: chess_com.py  stockfish_service.py  system_resources.py
data/: games.db  games_backup.db
data/analysis/: 1.json  10.json  196.json  241.json  242.json  245.json  246.json  247.json  248.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/src/lib/: theme.js
frontend/src/lib/api/: client.js
frontend/src/lib/components/: GameView.svelte  Games.svelte  Header.svelte  Home.svelte  Settings.svelte  SetupWizard.svelte  Sync.svelte
notes/: Step 4 - completed.md  Step 4. Frontend - Svelte Basics.md  Step 5. Backend - Resource Detection & Stockfish Config.md  Step 6 - completed.md  Summary 30.10.2025.md
scripts/: dev.sh  run-images.ps1  run-images.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
