[package]
name = "local-chess-analyzer"
version = "0.1.0"
description = "Local Chess Analyzer"
authors = ["Local Chess Analyzer"]
license = "GPL-3.0"
repository = ""
default-run = "local-chess-analyzer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


